feat: Adicionando Service para notificação por email e ajustado a passagem de tamanho de listagem para o frontend.
API Java:
* AgendaController
* AgendaService (refatorado)
* EmailNotificationService

Frontend:
* agenda.service.ts
* lista-contatos.component.ts

Estas alterações visam melhorar a clareza e compreensão do código, facilitando a manutenção e colaboração futuras.

--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,9 +1,8 @@
 # Dados de conexão com o banco PostgreSQL
 spring.datasource.url=jdbc:postgresql://localhost:5432/maptriz_agenda
 spring.datasource.username=postgres
-spring.datasource.password=Fran1903#
-#spring.datasource.driver-class-name=org.postgresql.Driver
-
+spring.datasource.password=technix
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Configuracao para mostrar o SQL no console
 spring.jpa.show-sql=true
