--- a/front-end/package.json
+++ b/front-end/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
     "gyp": "^0.5.0",
+    "ngx-mask": "^13.2.2",
     "nvm": "^0.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
